quickfix: setting width of #contact input fixes overlapping with section #dojo-links in issue #2

--- a/css/new_default.css
+++ b/css/new_default.css
@@ -103,12 +103,14 @@ footer
 #contact input
 {
 	margin-top: 8px;
+	width: 200px
 }
 
 #contact textarea
 {
 	margin-top: 8px;
 	resize: none;	
+	width: 200px;
 }
 
 #contact button
